--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ pixels = "0.11.0"
 winit = "0.27"
 winit_input_helper = "0.13"
 game-loop = { version = "0.10.0", features = ["winit"] }
+num = "0.4.0"
