Replace Arc<Mutex<T>> with Rc<RefCell<T>>
None of the Arc<Mutex<T>> were being shared across threads, so they
have no advantage over Rc<RefCell<T>>.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ winit = "0.27"
 winit_input_helper = "0.13"
 game-loop = { version = "0.10.0", features = ["winit"] }
 num = "0.4.0"
+
+[profile.release]
+debug = true
