--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ winit_input_helper = "0.13"
 game-loop = { version = "0.10.0", features = ["winit"] }
 num = "0.4.0"
 device_query = "1.1.1"
+sdl2 = { version = "0.35.2", features = ["bundled"] }
 
 [dev-dependencies]
 pprof = { version = "0.3", features = ["flamegraph"] }
