--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ game-loop = { version = "0.10.0", features = ["winit"] }
 num = "0.4.0"
 device_query = "1.1.1"
 sdl2 = { version = "0.35.2", features = ["bundled"] }
+clap = { version = "4.1.4", features = ["derive"] }
 
 [dev-dependencies]
 pprof = { version = "0.3", features = ["flamegraph"] }
