--- a/gameboy_emulator/Cargo.toml
+++ b/gameboy_emulator/Cargo.toml
@@ -15,6 +15,7 @@ num = "0.4.0"
 clap = { version = "4.1.4", features = ["derive"] }
 wasm-bindgen = "0.2.63"
 js-sys = "0.3.61"
+console_error_panic_hook = "0.1.7"
 
 sdl2 = { version = "0.35.2", features = ["bundled", "unsafe_textures"], optional = true }
 
