--- a/gameboy_emulator/www/package.json
+++ b/gameboy_emulator/www/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --config webpack.config.js --hot"
+    "start": "webpack-dev-server --port 3000 --config webpack.config.js --hot --host 0.0.0.0"
   },
   "dependencies": {
     "gameboy-emulator": "file:../pkg"
