--- a/.github/workflows/webpack-gh-pages.yml
+++ b/.github/workflows/webpack-gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         ls
         cd gameboy_emulator/www
-        npm install
+        npm install --legacy-peer-deps
         npm run build
         
     - name: Deploy to GitHub Pages
