--- a/.github/workflows/webpack-gh-pages.yml
+++ b/.github/workflows/webpack-gh-pages.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: jetli/wasm-pack-action@v0.4.0
+      with:
+        # Optional version of wasm-pack to install(eg. 'v0.9.1', 'latest')
+        version: 'latest'
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
