--- a/.github/workflows/webpack-gh-pages.yml
+++ b/.github/workflows/webpack-gh-pages.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.4.1
       with:
-        folder: dist
+        folder: gameboy_emulator/www/dist
