--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "gameboy_emulator": "file:../gameboy_emulator/pkg",
+    "immutable": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
