Use correct frontend directory in build script

--- a/.github/workflows/webpack-gh-pages.yml
+++ b/.github/workflows/webpack-gh-pages.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: |
         ls
-        cd gameboy_emulator/www
+        cd frontend
         npm install 
         npm run build:wasm
         npm run build
