--- a/gameboy_emulator/Cargo.toml
+++ b/gameboy_emulator/Cargo.toml
@@ -17,9 +17,10 @@ wasm-bindgen = "0.2.63"
 js-sys = "0.3.61"
 web-sys = { version="0.3.61", features = ["console"] }
 console_error_panic_hook = "0.1.7"
+ringbuf = "0.3.3"
 
 sdl2 = { version = "0.35.2", features = ["bundled", "unsafe_textures"], optional = true }
-ringbuf = "0.3.3"
+wav = { version = "1.0.0", optional = true }
 
 [dev-dependencies]
 pprof = { version = "0.3", features = ["flamegraph"] }
@@ -33,7 +34,7 @@ name = "emu_benches"
 harness = false
 
 [features]
-sdl2-emu= ["sdl2"]
+sdl2-emu= ["sdl2", "wav"]
 
 [[bin]]
 name = "emulator"
