--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/audioworklet": "^0.0.41",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/web": "^0.0.99",
     "classnames": "^2.3.2",
     "gameboy_emulator": "file:../gameboy_emulator/pkg",
     "immutable": "^4.3.0",
