Change addressable methods
Single byte reads/writes are much more common than the range
accesses, so they should be prioritized.  This improves performance
of a frame tick by ~30% on my machine.

--- a/gameboy_emulator/.gitignore
+++ b/gameboy_emulator/.gitignore
@@ -1,5 +1,10 @@
 /target
-**/flamegraph.svg
+roms/*
+
+# audio output log
+output.wav
+
+# profiling data
 **/perf.data
 **/perf.data.old
-roms/*
+**/flamegraph.svg
